opam-version: "2.0"

name: "LoopInvGen"
version: "1.0"
synopsis: "A sufficient loop invariant generator"

maintainer: "Saswat Padhi <saswat.sourav@gmail.com>"
authors: "Saswat Padhi <saswat.sourav@gmail.com>"
homepage: "http://saswatpadhi.github.io/"

bug-reports: "https://github.com/SaswatPadhi/LoopInvGen/issues"
license: "MIT"
dev-repo: "git+https://github.com:SaswatPadhi/LoopInvGen.git"

build: [
  [ "dune" "build" "@NoLog" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "build" "test/Runner.exe"
    {with-test} ]
]

depends: [
  "ocaml"         {>= "4.07"}
  "dune"          {>= "1.6" & build}
  "alcotest"      {>= "0.7" & with-test}
  "core"          {>= "v0.12.2"}
  "ppx_let"       {>= "v0.12.0"}
]
